<resources>
    <string translatable="false" name="app_name">CTemplar</string>
    <string translatable="false" name="platform">android</string>
    <string name="navigation_drawer_open">Gezinti Çekmecesini Aç</string>
    <string name="navigation_drawer_close">Gezinti Çekmecesini kapat</string>
    <string name="nav_header_desc">Gezinti Başlığı</string>
    <string name="action_settings">Ayarlar</string>
    <string name="action_undo">GERİ AL</string>
    <string name="dialog_log_out">Çıkış Yap</string>
    <string name="dialog_log_out_confirm">"Oturumu Kapatmak İstediğinizden Emin misiniz?"</string>
    <string name="btn_log_out">Çıkış Yap</string>
    <string name="nav_drawer_inbox">Gelen Kutusu</string>
    <string name="nav_drawer_draft">Taslak</string>
    <string name="nav_drawer_sent">Gönderilmiş</string>
    <string name="nav_drawer_outbox">Giden Kutusu</string>
    <string name="nav_drawer_starred">Yıldızlı</string>
    <string name="nav_drawer_archive">Arşiv</string>
    <string name="nav_drawer_spam">Spam</string>
    <string name="nav_drawer_trash">Çöp Kutusu</string>
    <string name="nav_drawer_all_mails">Tüm E-postalar</string>
    <string name="nav_drawer_unread">Okunmamış</string>
    <string name="nav_drawer_add_folder">Klasör Ekle</string>
    <string name="nav_drawer_add_label">Etiket Ekle</string>
    <string name="nav_drawer_contact">Kişiler</string>
    <string name="nav_drawer_settings">Ayarlar</string>
    <string name="nav_drawer_help">Yardım</string>
    <string name="nav_drawer_logout">ÇıkışYap</string>
    <string name="nav_drawer_manage_folders">Klasörleri Yönet</string>
    <string name="nav_drawer_manage_folders_param">Klasörleri Yönet (%1$d)</string>
    <string name="nav_drawer_folders_show_more">10 Klasör Daha Göster</string>
    <string name="action_search">Ara</string>
    <string name="action_filter">Filtre</string>
    <string name="action_search_hint">Mail ara</string>
    <string name="action_empty_folder">Boş klasör</string>
    <string name="action_spam">1 spam olarak bildirildi</string>
    <string name="action_archived">1 arşivlendi</string>
    <string name="action_moved_to_inbox">1 Gelen kutusuna taşındı</string>
    <string name="action_reported_as_spam">1 spam olarak bildirildi</string>
    <string name="action_reported_as_not_spam">1 spam olmadığı bildirildi</string>
    <string name="action_message_removed">1 message removed</string>
    <string name="menu_save">Save</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_not_spam">Mark Not Spam</string>
    <string name="menu_move">Move</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_move_to_inbox">Move to Inbox</string>
    <string name="menu_move_to_archive">Move to Archive</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string translatable="false" name="encrypted_subject">...</string>
    <string translatable="false" name="subject_reply">Re: %s</string>
    <string translatable="false" name="subject_forward">Fwd: %s</string>
    <string name="token_expired_title">Session expired</string>
    <string name="token_expired_message">Your session has expired, please log in to CTemplar again.</string>
    <string name="title_email">Email</string>
    <string name="title_next">Next</string>
    <string name="title_next_no_email">Next (No Email)</string>
    <string name="title_password">Password</string>
    <string name="title_username">Username</string>
    <string name="title_2fa">2 FACTOR AUTHENTICATION</string>
    <string name="title_2fa_code">Enter code generated by the app.</string>
    <string name="title_captcha">Captcha</string>
    <string name="title_ctemplar">CTEMPLAR</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="title_forgot_password_hint">We will send a reset link to your recovery email.</string>
    <string name="title_choose_password">Choose password</string>
    <string name="title_confirm_password">Confirm password</string>
    <string name="title_ctemplar_username">CTemplar username to reset</string>
    <string name="title_recovery_email">Recovery email</string>
    <string name="title_security_check">Security check</string>
    <string name="title_recovery_email_optional">Recovery email (Optional)</string>
    <string name="title_reset_password">Reset password</string>
    <string name="title_reset_code">Reset code</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_confirm_reset_password">Confirm Reset Password</string>
    <string name="title_invitation_code">Invitation code</string>
    <string name="title_further_question_hint">If you have further questions please email <![CDATA[<u><a href="mailto:support@ctemplar.com">support@ctemplar.com</a></u>]]></string>
    <string name="title_confirm_reset_password_hint">Your encryption key is connected to your password. Because of this <![CDATA[<font color="#e74c3c">you will not be able to decrypt old messages, attachments and contacts</font>]]> if you reset your password.</string>
    <string name="title_confirm_reset_password_hint2">Are you sure you want to reset your password?</string>
    <string name="title_reset_code_hint">We have sent a reset code to your <![CDATA[<u><a href="mailto:%1$s">recovery email</a></u>]]> to reset your password.</string>
    <string name="title_reset_code_hint2">Enter it below for confirmation.</string>
    <string name="title_new_password_hint">Don\'t forget this password, it can\'t be restored.</string>
    <string name="title_forgot_username_underlined"><u>Forgot your username?</u></string>
    <string name="title_keep_me_logged_in">Keep me logged in</string>
    <string name="title_forgot_username">Forgot your username?</string>
    <string name="title_forgot_username_hint">Enter your email address and we will send you your username.</string>
    <string name="title_email_my_username">Email me my username</string>
    <string name="title_username_and_domain">Username and domain</string>
    <string name="title_step_username_hint">This will be your new CTemplar email address.</string>
    <string name="title_step_password_hint">Your password must be at least 10 characters. Password can contain only Latin letters and cannot contain symbols such as «-+!@. etc.</string>
    <string name="hint_step_email_recovery_long">By checking this box you understand that if you lose your password and do not set a recovery email, your account will not be recoverable. Your password is connected to your encryption key, if you change your password you will be issued a new encryption key and ALL contents of your account will be lost except for your email address. <![CDATA[<u><font color="blue">Less</font></u>]]></string>
    <string name="hint_step_email_recovery_short">By checking this box you understand that if you lose your password and do not set a recovery email your account will not be recoverable. <![CDATA[<u><font color="blue">More info</font></u>]]></string>
    <string name="title_step_email_hint">This is used to recover your account if you forget your password.</string>
    <string name="title_step_email_check_hint">Please check this box if you agree to abide by our <![CDATA[<u><a href="https://ctemplar.com/terms">Terms and Conditions.</a></u>]]></string>
    <string name="title_step_invitation_code_hint">You can get invitation code from any existing paid customer or you can request an invitation code from us. Why invite codes and how to get one? <![CDATA[<u><a href="https://ctemplar.com/email-creation-restriction/">Learn more</a></u>]]></string>
    <string name="title_more_info_link"><u>More Info</u></string>
    <string name="title_empty_inbox">You have no inbox messages</string>
    <string name="title_empty_messages">You have no %1$s messages</string>
    <string name="title_empty_contacts">You have no contacts yet</string>
    <string name="title_empty_folders">You have no folders</string>
    <string name="title_empty_filters">There are no messages match the filter</string>
    <string name="btn_login">Log in</string>
    <string name="btn_compose">Compose</string>
    <string name="btn_add_folder">Add folder</string>
    <string name="pin_lock">PIN Lock</string>
    <string name="use_tor">Use Tor</string>
    <string name="use_tor_description">Use Tor for network requests. Requires Orbot</string>
    <string name="http_proxy">HTTP Proxy</string>
    <string name="http_proxy_description">Use HTTP Proxy for network requests</string>
    <string name="proxy_host">Proxy Host</string>
    <string name="proxy_host_description">Proxy\'s address (e.g. 127.0.0.1)</string>
    <string name="proxy_port">Proxy Port</string>
    <string name="proxy_port_description">Proxy\'s port number (e.g. 8118)</string>
    <string name="settings_general">General settings</string>
    <string name="settings_recovery_email">Recovery email</string>
    <string name="settings_password">Password</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_encryption">Encryption</string>
    <string name="settings_phishing_protection">Phishing Protection</string>
    <string name="settings_filters">Filters</string>
    <string name="settings_wb_list">Whitelist/Blacklist</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_folders">Folders</string>
    <string name="settings_manage_folders">Manage folders</string>
    <string name="settings_security">Security</string>
    <string name="settings_mail">Mail</string>
    <string name="settings_addresses">Addresses</string>
    <string name="settings_signature">Signature</string>
    <string name="settings_keys">Keys</string>
    <string name="settings_about">About</string>
    <string name="settings_local_storage_limit">Local storage limit</string>
    <string name="settings_app_version">App version</string>
    <string translatable="false" name="rsa4096">RSA4096</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="key_type">Key type</string>
    <string name="add_new_key">Add new key</string>
    <string name="import_key">Import key</string>
    <string name="enter_your_password_to_continue">Please enter your account password to continue</string>
    <string name="generate_keys">Generate keys</string>
    <string name="select_mailbox_for_new_key">Please select a mailbox that you want to add new key</string>
    <string name="select_key_type">Please select a key type</string>
    <string name="ecc_default">ECC (Default)</string>
    <string translatable="false" name="password_key">password_key</string>
    <string translatable="false" name="pin_lock_key">pin_lock_key</string>
    <string translatable="false" name="signature_key">signature_key</string>
    <string translatable="false" name="white_black_list">white_black_list</string>
    <string translatable="false" name="manage_folders">manage_folders</string>
    <string translatable="false" name="use_tor_key">use_tor_key</string>
    <string translatable="false" name="use_http_proxy_key">use_http_proxy_key</string>
    <string translatable="false" name="proxy_host_key">proxy_host_key</string>
    <string translatable="false" name="proxy_port_key">proxy_port_key</string>
    <string translatable="false" name="setting_keys">setting_keys</string>
    <string translatable="false" name="email_addresses">email_addresses</string>
    <string translatable="false" name="local_storage_limit">local_storage_limit</string>
    <string translatable="false" name="recovery_email_holder">recovery_email_holder</string>
    <string translatable="false" name="free_plan">Free</string>
    <string translatable="false" name="prime_plan">Prime</string>
    <string translatable="false" name="knight_plan">Knight</string>
    <string translatable="false" name="marshal_plan">Marshal</string>
    <string translatable="false" name="champion_plan">Champion</string>
</resources>