<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings_activity">

    <PreferenceCategory
        android:title="@string/settings_general">

        <PreferenceScreen
            android:title="@string/settings_notifications"
            android:fragment="com.ctemplar.app.fdroid.settings.SettingsActivity$NotificationsFragment" />

        <PreferenceScreen
            android:title="@string/settings_auto_save"
            android:fragment="com.ctemplar.app.fdroid.settings.SettingsActivity$AutoSaveFragment" />

        <Preference
            android:title="@string/settings_dark_mode"
            android:fragment="com.ctemplar.app.fdroid.settings.SettingsActivity$DarkModeFragment" />

        <Preference
            android:title="@string/settings_filters"
            android:key="@string/filters" />

        <Preference
            android:title="@string/settings_wb_list"
            android:key="@string/white_black_list" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_folders">

        <Preference
            android:title="@string/settings_manage_folders"
            android:key="@string/manage_folders" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_security">

        <Preference
            android:title="@string/settings_password"
            android:key="@string/password_key" />

        <Preference
            android:title="@string/pin_lock"
            android:key="@string/pin_lock_key" />

        <PreferenceScreen
            android:title="@string/settings_recovery_email"
            android:key="@string/recovery_email_holder"
            android:fragment="com.ctemplar.app.fdroid.settings.SettingsActivity$RecoveryEmailFragment" />

        <PreferenceScreen
            android:title="@string/settings_encryption"
            android:fragment="com.ctemplar.app.fdroid.settings.SettingsActivity$EncryptionFragment" />

        <PreferenceScreen
            android:title="@string/settings_phishing_protection"
            android:fragment="com.ctemplar.app.fdroid.settings.SettingsActivity$PhishingProtectionFragment" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_mail">

        <Preference
            android:title="@string/settings_addresses"
            android:key="@string/email_addresses" />

        <PreferenceScreen
            android:title="@string/settings_signature"
            android:key="@string/signature_key" />

        <PreferenceScreen
            android:title="@string/settings_mobile_signature"
            android:key="@string/mobile_signature_key" />

        <PreferenceScreen
            android:title="@string/settings_keys"
            android:key="@string/setting_keys" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_about">

        <Preference
            android:title="@string/settings_local_storage_limit"
            android:summary="0 B of 500 MB"
            android:key="@string/local_storage_limit" />

        <Preference
            android:title="@string/settings_app_version"
            android:summary="@string/versionName" />

    </PreferenceCategory>

</PreferenceScreen>