<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_drawer_inbox"
            android:title="@string/nav_drawer_inbox" />
        <item
            android:id="@+id/nav_draft"
            android:icon="@drawable/ic_drawer_draft"
            android:title="@string/nav_drawer_draft" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_drawer_sent"
            android:title="@string/nav_drawer_sent" />
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_drawer_star"
            android:title="@string/nav_drawer_starred" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_drawer_contact"
            android:title="@string/nav_drawer_contact" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_drawer_logout"
            android:title="@string/nav_drawer_logout" />
    </group>

</menu>
