<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_action_filter_off"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_empty_folder"
        android:title="@string/action_empty_folder"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
