<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:id="@+id/email_address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/lato_regular"
        android:text="@string/title_email" />

    <TextView
        android:id="@+id/fingerprint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/lato_regular"
        android:text="@string/fingerprint" />

    <TextView
        android:id="@+id/key_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/lato_regular"
        android:text="@string/key_type" />

</LinearLayout>