<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fontFamily="@font/lato_bold"
            app:title="@string/add_new_key" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="@string/select_mailbox_for_new_key"
                android:textColor="?android:textColorSecondary"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Spinner
                android:id="@+id/email_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_domain_spinner" />

            <TextView
                android:id="@+id/key_type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/select_key_type"
                android:textColor="?android:textColorSecondary"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <RadioGroup
                android:id="@+id/select_key_type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/ecc_default_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/ecc_default" />

                <RadioButton
                    android:id="@+id/rsa4096_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rsa4096" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/enter_your_password_to_continue"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/selector_password_state"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/secondaryTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_input_field"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/title_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusForward="@id/confirmation_edit_text"
                    android:padding="12dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp" />

                <requestFocus />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/generate_keys_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button_blue"
                android:fontFamily="@font/lato_regular"
                android:text="@string/generate_keys"
                android:textColor="@color/colorWhiteLight" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>