<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fragment_step_username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/lato_regular"
        android:letterSpacing="-0.02"
        android:text="@string/title_username_and_domain"
        android:textColor="@color/colorDarkBlue"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_step_username_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/title_step_username_hint"
        android:textColor="@color/colorBlack50"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_step_username_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_step_username_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="24dp"
        android:textColorHint="@color/colorDarkBlue2"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/TextHintAppearanceDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_step_username_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_step_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/title_username"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.05"
            android:textColor="@color/colorDarkBlue2"
            android:textSize="16sp"
            android:theme="@style/EditTextCredentialsThemeDark" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_step_username_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/selector_button_orange"
        android:fontFamily="@font/lato_regular"
        android:text="@string/title_next"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/fragment_step_username_input_layout" />

</android.support.constraint.ConstraintLayout>